--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 	</dependencies>
 
