--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2-realtransform</artifactId>
+			<version>2.0.0-beta-36</version>
+		</dependency>
 	</dependencies>
 
 	<developers>
