--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,9 @@
 			<artifactId>ui-behaviour</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
 </project>
