--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
 		<releaseProfiles>deploy-to-imagej</releaseProfiles>
 		
-		<bigdataviewer-core.version>4.3.2</bigdataviewer-core.version>
+		<bigdataviewer-core.version>4.4.1-SNAPSHOT</bigdataviewer-core.version>
 		<ui-behaviour.version>1.7.1</ui-behaviour.version>
 	</properties>
 
@@ -112,10 +112,12 @@
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
+			<version>5.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-cache</artifactId>
+			<version>1.0.0-beta-8</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
