--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>bigdataviewer-vistools</artifactId>
-	<version>1.0.0-beta-12-SNAPSHOT</version>
+	<version>1.0.0-beta-12</version>
 
 	<name>BigDataViewer Visualization Tools</name>
 	<description>Helpers to use BigDataViewer as quick visualization in other projects</description>
@@ -71,7 +71,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/bigdataviewer/bigdataviewer-vistools</connection>
 		<developerConnection>scm:git:git@github.com:bigdataviewer/bigdataviewer-vistools</developerConnection>
-		<tag>HEAD</tag>
+		<tag>bigdataviewer-vistools-1.0.0-beta-12</tag>
 		<url>https://github.com/bigdataviewer/bigdataviewer-vistools</url>
 	</scm>
 	<issueManagement>
