POM: Use HTTPS for imagej.net URLs

--- a/pom.xml
+++ b/pom.xml
@@ -68,17 +68,17 @@
 		</contributor>
 		<contributor>
 			<name>Jan Eglinger</name>
-			<url>http://imagej.net/User:Eglinger</url>
+			<url>https://imagej.net/User:Eglinger</url>
 			<properties><id>imagejan</id></properties>
 		</contributor>
 		<contributor>
 			<name>Matthias Arzt</name>
-			<url>http://imagej.net/User:Maarzt</url>
+			<url>https://imagej.net/User:Maarzt</url>
 			<properties><id>maarzt</id></properties>
 		</contributor>
 		<contributor>
 			<name>Philipp Hanslovsky</name>
-			<url>http://imagej.net/User:Hanslovsky</url>
+			<url>https://imagej.net/User:Hanslovsky</url>
 			<properties><id>hanslovsky</id></properties>
 		</contributor>
 		<contributor>
