Add BDV-UI Panel

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
 			<artifactId>ui-behaviour</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout</artifactId>
+			<version>3.7.4</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
