--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
 	<mailingLists>
 		<mailingList>
 			<name>Image.sc Forum</name>
-			<archive>https://forum.image.sc/</archive>
+			<archive>https://forum.image.sc/tags/bigdataviewer</archive>
 		</mailingList>
 	</mailingLists>
 
