--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
 		<license.projectName>BigDataViewer quick visualization API.</license.projectName>
 
 		<bigdataviewer-core.version>7.0.0</bigdataviewer-core.version>
+		<imglib2-cache.version>1.0.0-beta-12</imglib2-cache.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
