Update to bigdataviewer-core 9.0.0 (#44)
* POM: update dependency versions

	bigdataviewer-core -> 9.0.0
	imglib2            -> 5.9.0
	imglib2-cache      -> 1.0.0-beta-13

* clean up

* Adopt bdv-core 9.0.0: Use SplitPanel, CardPanel, and ConverterSetups

* Replace uses of deprecated bdv-core API

* Fix DisplayRangeExample

Add splitPanel instead of viewerPanel to the frame, otherwise cardpanel is
never visible

* Make new instances of Type for storing in sources

* Revise Bdv.close() implementations

* Add explicit System.gc() in BdvHandleGarbageCollectionTest

* Use SplitPanel instead of ViewerPanel

* formatting

* Tweak examples

 * Use "G" shortcut instead of "P" in Action/BehaviourExample, because
   "P" is bound to "expand side panel" now
 * Locate "bdvkeyconfig.yaml" from resource instead of relative path

* POM: update parent to pom-scijava 28.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>27.0.1</version>
+		<version>28.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -119,8 +119,10 @@
 		<license.copyrightOwners>BigDataViewer developers.</license.copyrightOwners>
 		<license.projectName>BigDataViewer quick visualization API.</license.projectName>
 
-		<bigdataviewer-core.version>7.0.0</bigdataviewer-core.version>
-		<imglib2-cache.version>1.0.0-beta-12</imglib2-cache.version>
+		<bigdataviewer-core.version>9.0.0</bigdataviewer-core.version>
+		<imglib2.version>5.9.0</imglib2.version>
+		<imglib2-cache.version>1.0.0-beta-13</imglib2-cache.version>
+		<ui-behaviour.version>2.0.1</ui-behaviour.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
