Switch from Travis CI to GitHub Actions

--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,8 @@
 		<url>https://github.com/bigdataviewer/bigdataviewer-vistools/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/bigdataviewer/bigdataviewer-vistools</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/bigdataviewer/bigdataviewer-vistools/actions</url>
 	</ciManagement>
 
 	<properties>
@@ -122,7 +122,7 @@
 		<bigdataviewer-core.version>10.2.0</bigdataviewer-core.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<repositories>
