--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/bigdataviewer/bigdataviewer-vistools</connection>
+		<connection>scm:git:https://github.com/bigdataviewer/bigdataviewer-vistools</connection>
 		<developerConnection>scm:git:git@github.com:bigdataviewer/bigdataviewer-vistools</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/bigdataviewer/bigdataviewer-vistools</url>
