--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,8 @@
 		<license.copyrightOwners>BigDataViewer developers.</license.copyrightOwners>
 		<license.projectName>BigDataViewer quick visualization API.</license.projectName>
 
-		<bigdataviewer-core.version>10.2.1</bigdataviewer-core.version>
+		<ui-behaviour.version>2.0.6</ui-behaviour.version>
+		<bigdataviewer-core.version>10.4.1</bigdataviewer-core.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
